--- a/KendyNet/Makefile
+++ b/KendyNet/Makefile
@@ -73,7 +73,8 @@ sample-source = sample/broadcast_svr.c\
 		 sample/testchrdev.c\
 		 sample/testatomicst.c\
 		 sample/ssl_server.c\
-		 sample/ssl_client.c
+		 sample/ssl_client.c\
+		 sample/teststr.c
 	   
 release:$(source)
 	$(CC) $(SHARED) -O2 $(CFLAGS) -c $(source) $(INCLUDE) $(DEFINE)
@@ -108,6 +109,10 @@ sample:$(LIBNAME) $(sample-source)
 	$(CC) $(CFLAGS) -o testatomicst testatomicst.o $(LIBNAME) $(DEPDIR)/jemalloc/lib/libjemalloc.a  $(INCLUDE) $(LDFLAGS) $(DEFINE)
 	$(CC) $(CFLAGS) -o ssl_server ssl_server.o $(LIBNAME) $(DEPDIR)/jemalloc/lib/libjemalloc.a  $(INCLUDE) $(LDFLAGS) $(DEFINE)
 	$(CC) $(CFLAGS) -o ssl_client ssl_client.o $(LIBNAME) $(DEPDIR)/jemalloc/lib/libjemalloc.a  $(INCLUDE) $(LDFLAGS) $(DEFINE)
+	$(CC) $(CFLAGS) -o teststr teststr.o $(LIBNAME) $(DEPDIR)/jemalloc/lib/libjemalloc.a  $(INCLUDE) $(LDFLAGS) $(DEFINE)
+
+teststr:sample/teststr.c $(LIBNAME)
+	$(CC) $(CFLAGS) -o teststr sample/teststr.c $(LIBNAME) $(DEPDIR)/jemalloc/lib/libjemalloc.a  $(INCLUDE) $(LDFLAGS) $(DEFINE)	
 
 clean:
 	rm *.o
