--- a/KendyNet/sample/uthread/Makefile
+++ b/KendyNet/sample/uthread/Makefile
@@ -19,8 +19,11 @@ endif
 ut_socket.o:ut_socket.c
 	$(CC) $(CFLAGS) -c ut_socket.c $(INCLUDE) $(DEFINE)
 
-server:ut_socket.o server.c
-	$(CC) $(CFLAGS) -o server server.c ut_socket.o ../../libkendynet.a $(INCLUDE)  $(LDFLAGS) $(DEFINE)
+uthread.o:uthread.c
+	$(CC) $(CFLAGS) -c uthread.c $(INCLUDE) $(DEFINE)	
 
-client:ut_socket.o client.c
-	$(CC) $(CFLAGS) -o client client.c ut_socket.o ../../libkendynet.a $(INCLUDE)  $(LDFLAGS) $(DEFINE)	 
+server:ut_socket.o uthread.o server.c
+	$(CC) $(CFLAGS) -o server server.c ut_socket.o uthread.o ../../libkendynet.a $(INCLUDE)  $(LDFLAGS) $(DEFINE)
+
+client:ut_socket.o uthread.o client.c
+	$(CC) $(CFLAGS) -o client client.c ut_socket.o uthread.o ../../libkendynet.a $(INCLUDE)  $(LDFLAGS) $(DEFINE)	 
